Changes from jTDS 0.9.1
=======================

12/20/2004 - Alin Sinpalean
 o Fixed bug [1086477] RETURN_GENERATED_KEYS on select returns 1 row.
 o Applied patch [1088293] Simplified multi threaded execution with a few minor
   corrections and modifications.
 o DDL statements no longer return update counts. This should make jTDS more
   compatible with other drivers and the spec.

12/19/2004 - Alin Sinpalean
 o Fixed bug [1082986] prepareSQL=3 Does Not Function (caused by the separation
   of input and output values).
 o Applied Mike's fix for bug [1086494] DatabaseMetaData.getProcedureColumns
   broken on Sybase.
 o Fixed bug [1087057] Connection is closed during XA Transaction. Also added
   check for error severity: if greater than or equal to 20 the Connection is
   closed (because the server will close the connection after the error).

12/17/2004 - Alin Sinpalean
 o Applied, with some minor changes and corrections, patch [1086173] Windows
   Local Named Pipe Support. Thanks go to Stardog33.
 o Fixed failure of JtdsDataSourceUnitTest.testNoUser() with a runtime error
   caused by inability to load the ntlmauth DLL.
 o Added one more test for SharedSocket synchronization, only with RPC
   requests. Still not able to reproduce the locking read.

12/16/2004 - Alin Sinpalean
 o Possible fix for bug [1086156] Hang in driver socketRead under load. Could
   not actually reproduce the exact behavior but found other errors caused by
   incomplete synchronization on SharedSocket.
 o Fixed a bug that was causing setSavepoint() to fail when no statements to
   actually start a transaction were executed before.

12/14/2004 - Alin Sinpalean
 o Implemented fetching of row blocks with cursor ResultSets, controllable
   through setFetchSize(). As part of this, also implemented support for
   sending more than one request in one packet.
 o Applied Mike's update to patch [1037237] Windows Single Sign On in jTDS.

12/13/2004 - Alin Sinpalean