@@ -4,39 +4,79 @@
               Patch Submitted by Magendran Sathaiah (mahi@aztec.soft.net)
 ===============================================================================
 
-Introduction:
-=============
-    This document is to explain the design for a patch that is being submitted
-    as an enhancement to the jTDS JDBC driver.
+Introduction
+============
 
-    As of now (release 0.9), jTDS driver DOES support Windows authentication by
-    means of the NTLM protocol. That is, clients who use the JDBC Driver will
-    pass a valid Windows-Domain-Name, a Windows User and Windows Password; the
-    JDBC driver will submit these to Microsoft SQL Server via NTLM protocol in
-    order to gain access to the database.
+    This document describes the design of the Single Sign On implementation in
+    the jTDS JDBC driver.
+
+    Releases 0.9.1 and earlier of jTDS driver support Windows authentication by
+    means of the NTLM protocol. That is, clients using the JDBC Driver passes
+    a valid Windows-Domain-Name, a Windows User and Windows Password; the JDBC
+    driver will submit these to Microsoft SQL Server via NTLM protocol in order
+    to gain access to the database. (This approach still works with all later
+    versions, allowing Windows Authentication to work for non-Windows clients
+    or clients that don't/can't have the native library installed.)
 
     In the above approach the client will have to maintain a configuration file
     to keep the windows logon credentials. That is, the domain name, user name
     and password need to be stored in encrypted or plain text format. This
     might not be an acceptable solution for everybody.
 
-    Can it use current window user's credentials to connect to SQL Server?
-    (Windows Single Sign On)
-
-    That is, what if we could make the jTDS driver capable of using the Windows
+    Starting with release 0.9.2 jTDS is capable of using the Windows
     credentials of the current user under whose account the client program is
-    running. Would it not make life easier for everybody?
+    running to login to SQL Server (Windows Single Sign On).
 
-    The patch being submitted addresses this goal. That is, with this patch
-    clients will be able to connect to Microsoft SQL Server without providing
-    credentials. It would dynamically read current user's credentials and
-    connect to the database; provided that the Windows account has enough
-    rights in the database. That is, here after the driver can do Windows
-    Single Sign On with MS SQL Server using this patch.
+    Using Windows Single Sign On (SSO) clients will be able to connect to
+    Microsoft SQL Server without providing credentials. It would dynamically
+    read current user's credentials and connect to the database. provided that
+    the Windows account has enough rights in the database. This is done using a
+    native (Windows-only) library, ntlmauth.dll.
 
 
-Design:
-=======
+Installation
+============
+
+    In order for Single Sign On to work, jTDS must be able to load the native
+    SPPI library (ntlmauth.dll). Place this DLL anywhere in the system path
+    (defined by the PATH system variable) and you're all set.
+
+
+Usage
+=====
+
+    In order to set up the jTDS driver to use Windows Single Sign On, users
+    will have to connect without providing a user name and password. This will
+    only work on Windows.
+
+    Driver example:
+
+        // No user name or password in URL or as parameters
+        DriverManager.getConnection(
+                "jdbc:jtds:sqlserver://localhost:1433/LionKing");
+
+    DataSource example:
+
+        ds = new JtdsDataSource();
+        ds.setDescription("test");
+
+        // MS SQL Server Host Name
+        ds.setServerName("localhost");
+
+        // Port
+        ds.setPortNumber(1433);
+
+        // Database Name
+        ds.setDatabaseName("LionKing");
+
+        // No domain name
+        // No user name
+
+        Connection conn = ds.getConnection();
+
+
+Design
+======
 
     The patch comprises the following components:
 
@@ -56,8 +96,9 @@ Design:
 SSPIJNIClient.java
 ==================
 
-    It loads the DLL (ntlmauth.dll) in a static block. So the ntlmauth.dll must
-    be available in the PATH variable. It exposes the following APIs:
+    It loads the DLL (ntlmauth.dll) in a static block. The ntlmauth.dll must be
+    available in the system path (defined by the system variable PATH). It
+    exposes the following APIs:
 
     public static SSPIJNIClient getInstance() throws Exception;
 
@@ -102,27 +143,28 @@ SSPIJNIClient.java
             //2.Send, Type-3 message to the Server.
             //3.Check the status - Success | Failure.
 
+
 Modifications to jTDS Classes
 =============================
-        The Tds.java has been modified as below
+        The TdsCode.java has been modified as follows
 
         1. Member boolean variable: ntlmAuthSSO
             A flag that is used to indicate if the client wants to do Windows
             Single Sign On. The variable is set in the logon(...) as below
 
-            ntlmAuthSSO = (domain.length > 0 && user.equals("$WINDOWS_USER$");
+            ntlmAuthSSO = (user == null || user.length() == 0);
 
-	    Note: The user must set the user name exactly as "$WINDOWS_USER$" and
-		  set a non-empty string as the domian name say "MY_DOMAIN" to
-                  set the driver to use window authentication
+	        Note: The user must leave the user name (and password) unset or set
+	              them to null or a blank string to instructthe driver to use
+	              Windows Single Sign On.
 
         2. Member Variable: sspiJNIClient
             A reference to the single-ton object of SSPIJNIClient.class
-            It gets initialzied in logon(..) if ntlmAuthSSO is TRUE
+            It gets initialzied in logon(..) if ntlmAuthSSO is true.
 
         3.  login(..)
             At the begining of the method check if Windows Single Sign On is
-            requested;ntlmAuth == TRUE
+            requested (ntlmAuth == true)
 
             If so initialize the SSPI client and prepare NTLM TYPE-1 message
 
@@ -130,11 +172,11 @@ Modifications to jTDS Classes
             Modified to accept an additional byte[] parameter to pass the NTLM
             Type-1 message.
 
-            Set the authLen = ntlmMessage.legnth() if ntlmAuthSSO is TRUE
+            Set the authLen = ntlmMessage.legnth() if ntlmAuthSSO is true
 
         5. sendNtlmChallengeResponse(...)
 
-           If ntlmAuthSSO is TRUE, then read the Type-2 message from
+           If ntlmAuthSSO is true, then read the Type-2 message from
            authToken.getNTLMMessage()
 
            Prepare Type-3 message as below
@@ -143,32 +185,8 @@ Modifications to jTDS Classes
 
            Then append it to the command buffer.
 
-
-jTDS Driver Usage:
-==================
-
-    In order to set up the jTDS driver to use Windows Single Sign On, users
-    will have to connect without providing a user name and password. This will
-    only work on Windows.
-
-    Example:
-
-        ds = new TdsDataSource();
-        ds.setDescription("test");
-
-        // MS SQL Server Host Name
-        ds.setServerName("localhost");
-
-        // Port
-        ds.setPortNumber(1433);
-
-        // Database Name
-        ds.setDatabaseName("LionKing");
-
-        // No domain name
-        // No user name
-
-        Connection conn = ds.getConnection();
 ------------------------------------------------------------------------------------------------------
 Magendran Sathaiah
 mahi@aztec.soft.net
+
+Version: $Id: README.SSO,v 1.1 2004-12-21 12:06:59 alin_sinpalean Exp $
